--- a/resources/index.css
+++ b/resources/index.css
@@ -1,45 +1,82 @@
 /* Universal Styles */
 html {
     background-color: white;
+    font-size: 16px;
   }
   
   /* Header */
-  header {
-    background-color: rgb(171, 211, 245);
-  }
+header {
+    background-color: rgb(158, 172, 231);
+}
   
-  nav {
-    background-color: rgb(212, 206, 206);
-    
-  }
-  
-  main {
-  background-color: rgb(242, 171, 171);
+nav {
+    background-color: rgb(120, 117, 117);
+    display: flex;
+    justify-content: right;
+}
+
+.navbar {
+    background-color: white;
+    display: flex;
+}
+
+.navbar li {
+    margin-right: 25px;
+}
+
+main {
+  /* background-color: rgb(242, 171, 171); */
   background-image: url('/Users/edgardobaltazar/Desktop/Web-Projects/personalportfolio/resources/pictures/losangeles.jpg');
   background-size: cover;
-  background-position-y: center;
-  height: 500px;
-  }
+  background-position-y: 35%;
+  height: 18rem;
+  text-align: center;
+  opacity: 0.85;
+}
+
+.banner h1 {
+    padding-top: 4rem;
+    color: white;
+}
+
+.banner p {
+    color: white;
+}
   
   
-  .skills {
-    background-color: antiquewhite;
-  }
+.skillscontainer {
+    background-color: rgb(239, 154, 42);
+    display: flex;
+    justify-content: center;
+}
+
+.skills {
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+.skill li {
+    display: inline-flex;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    font-family: 'Courier New', Courier, monospace;
+}
   
-  .about-me {
+.about-me {
     background-color: rgb(148, 132, 167);
-  }
+}
   
-  .projects {
+.projects {
     background-color: rgb(146, 232, 169);
-  }
+}
   
-  p {
+p {
       font-size: 18px;
-    }
+}
   
-  img {
+img {
       width: 375px;
       height: 500px;
       opacity: 0.8;
-  }
+}
