--- a/resources/index.css
+++ b/resources/index.css
@@ -6,17 +6,18 @@ html {
   
   /* Header */
 header {
-    background-color: rgb(158, 172, 231);
+    height: auto;
 }
   
 nav {
-    background-color: rgb(120, 117, 117);
+    background-color: rgb(168, 168, 162);
     display: flex;
     justify-content: right;
+    padding-bottom: 0px;
 }
 
 .navbar {
-    background-color: white;
+    color: white;
     display: flex;
 }
 
@@ -24,19 +25,28 @@ nav {
     margin-right: 25px;
 }
 
-main {
+
+.container-1 {
   /* background-color: rgb(242, 171, 171); */
   background-image: url('/Users/edgardobaltazar/Desktop/Web-Projects/personalportfolio/resources/pictures/losangeles.jpg');
   background-size: cover;
   background-position-y: 35%;
   height: 18rem;
-  text-align: center;
+  /* text-align: center; */
   opacity: 0.85;
+  padding-top: 1px;
+}
+
+
+.banner {
+    text-align: center;
 }
 
 .banner h1 {
     padding-top: 4rem;
     color: white;
+    opacity: 1.0;
+    z-index: 2;
 }
 
 .banner p {
@@ -45,15 +55,21 @@ main {
   
   
 .skillscontainer {
-    background-color: rgb(239, 154, 42);
+    background-color: rgb(168, 168, 162);
     display: flex;
     justify-content: center;
 }
 
 .skills {
-    background-color: white;
     display: flex;
     align-items: center;
+    
+}
+
+.skills h3 {
+    color: white;
+    font-weight: bolder;
+    font-size: 1.5rem;
 }
 
 .skill li {
@@ -61,11 +77,36 @@ main {
     margin-left: 2.5rem;
     margin-right: 2.5rem;
     font-family: 'Courier New', Courier, monospace;
+    color: white;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 2px 3px;
 }
+
   
 .about-me {
     background-color: rgb(148, 132, 167);
 }
+
+.desktop {
+   height: 100%;
+   width: 25rem;
+   margin-left: 2rem;
+   margin-right: 2rem;
+   padding: 1rem 2rem 1rem;
+   border: 2px solid black;
+}
+
+#flex-1 {
+    display: flex;
+}
+
+.about {
+    display: block;
+    color: white;
+    font-size: 2rem;
+}
+
   
 .projects {
     background-color: rgb(146, 232, 169);
