--- a/resources/index.css
+++ b/resources/index.css
@@ -1,4 +1,4 @@
-/* Universal Styles */
+   /* Universal Styles */
 html {
     background-color: rgb(238, 238, 228);
     font-size: 16px;
@@ -11,8 +11,8 @@ body {
 section {
     padding: 1rem 1rem;
 }
-  
-  /* Header */
+    
+   /* Header */
 header {
     height: auto;
 }
@@ -39,15 +39,13 @@ a {
     color: white;
 }
 
-
+      /* Banner Section */
 .container-1 {
-  /* background-color: rgb(242, 171, 171); */
   background-image: url('/Users/edgardobaltazar/Desktop/Web-Projects/personalportfolio/resources/pictures/losangeles.jpg');
   background-size: cover;
   background-position-y: 35%;
   height: 18rem;
   width: auto;
-  /* text-align: center; */
   opacity: 0.9;
   padding-top: 1px;
 }
@@ -64,10 +62,6 @@ a {
     text-align: center;
 }
 
-/* .banner h1 {
-    padding-top: 4rem;
-    color: white;
-} */
 
 .banner p {
     color: white;
@@ -75,7 +69,7 @@ a {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
   
-  
+           /* Skill Section */
 .skillscontainer {
     background-color: rgb(103, 101, 101);
     display: flex;
@@ -114,7 +108,6 @@ a {
 .about-me {
     background-color: rgb(238, 238, 228);
     display: inline-flex;
-    /* flex-wrap: wrap; */
 }
 
 .about-me h3 {
@@ -133,9 +126,10 @@ a {
    border: 2px solid black;
 }
 
+        /* About Me Section */
+
 #flex-1 {
     display: flex;
-    /* flex-wrap: wrap; */
 }
 
 .about {
@@ -148,6 +142,8 @@ a {
     color:rgb(4, 4, 26);
 }
 
+
+   /* Projects Section */
   
 .projects {
     margin: auto 0;
@@ -168,7 +164,6 @@ a {
 }
 
 .container-2 {
-    /* background-color: white; */
     display: flex;
     justify-content: center;
 }
@@ -176,6 +171,7 @@ a {
 .project {
     background-color: rgb(103, 101, 101);
     width: 35%;
+    max-width: 450px;
     min-width: 350px;
     height: auto;
     margin-right: 2%;
@@ -205,15 +201,12 @@ a {
     color: white;
 }
   
-/* p {
-      font-size: 18px;
-} */
   
 img {
-      height: 350px;
-      width: 60%;
-      opacity: 0.9;
-      border: .5rem white groove;
+    height: 350px;
+    width: 60%;
+    opacity: 0.9;
+    border: .5rem white groove;
 }
 
 
@@ -232,7 +225,6 @@ img {
         width: 27rem;
     }
 }
-
 
 
 @media only screen and (max-width: 1253px) {
@@ -300,6 +292,7 @@ img {
     }
     
     .project figcaption {
+        font-size: 0.9rem;
         padding: 1rem 1rem;
     }
  }
@@ -364,6 +357,11 @@ img {
         margin-left: .1rem;
         margin-right: .1rem;
         border: 1px solid white;
+    }
+
+    .project figcaption {
+        font-size: 0.7rem;
+        padding: 1rem 1rem;
     }
 }
 
