--- a/resources/index.css
+++ b/resources/index.css
@@ -46,7 +46,7 @@ a {
   background-position-y: 35%;
   height: 18rem;
   width: auto;
-  opacity: 0.9;
+  opacity: 0.8;
   padding-top: 1px;
 }
 
@@ -54,7 +54,7 @@ a {
     color: white;
     text-align: center;
     padding-top: 4rem;
-    font-family: oblique;
+    font-family:'Times New Roman', Times, serif;
 }
 
 
@@ -66,7 +66,7 @@ a {
 .banner p {
     color: white;
     padding-bottom: 1rem;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Times New Roman', Times, serif;
 }
   
            /* Skill Section */
@@ -90,7 +90,7 @@ a {
     border: 3px solid white;
     padding: 2px 3px;
     border-radius: 5px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Courier New', Courier, monospace
 }
 
 .skill li {
@@ -111,9 +111,9 @@ a {
 }
 
 .about-me h3 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Courier New', Courier, monospace;
     text-decoration: underline;
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-style: oblique;
 }
 
@@ -153,9 +153,9 @@ a {
 .projects h3 {
     text-align: center;
     text-decoration: underline;
-    font-size: 3rem;
+    font-size: 2.4rem;
     font-style: oblique;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Courier New', Courier, monospace;
 }
 
 #flex-2 {
