--- a/resources/index.css
+++ b/resources/index.css
@@ -203,9 +203,7 @@ a {
   
   
 img {
-    height: 350px;
-    width: 60%;
-    opacity: 0.9;
+    opacity: 0.8;
     border: .5rem white groove;
 }
 
@@ -284,6 +282,8 @@ img {
      .project {
         width: 25%;
         min-width: 250px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
 
@@ -327,6 +327,11 @@ img {
         margin-left: .2rem;
         margin-right: .2rem;
     }
+
+    .project {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 @media only screen and (max-width: 643px) {
@@ -357,6 +362,11 @@ img {
         margin-left: .1rem;
         margin-right: .1rem;
         border: 1px solid white;
+    }
+
+    .project {
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .project figcaption {
